# linguo

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
debian/: control  copyright  rules
packaging/aur/: PKGBUILD.tmpl  generate.sh
packaging/chocolatey/: generate.sh  linguo.nuspec.tmpl
packaging/chocolatey/tools/: chocolateyinstall.ps1.tmpl
packaging/copr/: build-srpm.sh  linguo.spec.tmpl
packaging/homebrew/: generate.sh  linguo.rb
packaging/ppa/: build-source.sh
src/: config.rs  exec.rs  fetch.rs  groovy.rs  jvmlang.rs  kotlin.rs  main.rs  scala.rs  shell.rs  status.rs  store.rs  tools.rs  versions.rs  workspace.rs
src/go/: dist.rs  mod.rs  project.rs
src/jvm/: dist.rs  mod.rs
src/node/: dist.rs  mod.rs  project.rs
src/php/: dist.rs  mod.rs  project.rs
src/python/: dist.rs  mod.rs  project.rs  tool.rs
src/ruby/: dist.rs  mod.rs  project.rs
src/rust/: dist.rs  mod.rs  project.rs
src/terraform/: dist.rs  mod.rs
src/zig/: dist.rs  mod.rs  project.rs
wix/: main.wxs
