[package]
name = "linguo"
version = "0.3.0"
edition = "2024"
description = "Cross-platform, multi-language runtime, package, and project manager"
license = "MPL-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
flate2 = "1"
hex = "0.4"
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
toml_edit = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
